syntax="proto3";

package proto.inbox_marketing_incom;

option go_package = "github.com/micro/micro/v3/proto/inbox_marketing";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message IncomBodyRequest {
    string plugin_id = 1;
    string IdOmniMess = 2;
    string Status = 3;
    string Channel = 4;
    string ErrorCode = 5;
    float MtCount = 6;
    float TelcoId = 7;
    string IsCharged = 8;
}

message IncomResponse {
    string code = 1;
    string message = 2;
    google.protobuf.Struct data = 3;
}


service IncomService {
    rpc HandleWebhook(IncomBodyRequest) returns (IncomResponse) {
        option (google.api.http) = {
            post: "/bss/v1/incom/webhook/{plugin_id}",
            body: "*",
        };
    }
}